@@ -59,11 +59,8 @@ public class AchievementServiceImpl implements AchievementService {
             userAchievementRepo.getUserAchievementByUserId(user.getUserId())
                 .stream()
                 .filter(userAchievement -> !userAchievement.isNotified())
-                .collect(Collectors.toList());
-        System.out // TODO: refactor
-            .println("USER_ID -" + user.getUserId() + "| userAchievements.isEmpty() " + userAchievements.isEmpty());
-        messagingTemplate
-            .convertAndSend("/topic/" + user.getUserId() + "/notification", !userAchievements.isEmpty());
+                .toList();
+        messagingTemplate.convertAndSend("/topic/" + user.getUserId() + "/notification", !userAchievements.isEmpty());
     }
 
     /**
